Fix screen size on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  height: 100%;
 }
 
 h1 {
@@ -83,9 +84,10 @@ body {
   color: var(--foreground);
   font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
   font-weight: normal;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
   position: relative;
   padding: 0 2rem;
 }
